# MinkowskiEngine-new

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.claude/: commands  settings.json  skills
.claude/rules/: boot-context.md  next-steps-tracking.md
.github/workflows/: test.yml
MinkowskiEngine/: MinkowskiBroadcast.py  MinkowskiChannelwiseConvolution.py  MinkowskiCommon.py  MinkowskiConvolution.py  MinkowskiCoordinateManager.py  MinkowskiFunctional.py  MinkowskiInterpolation.py  MinkowskiKernelGenerator.py  MinkowskiNetwork.py  MinkowskiNonlinearity.py  MinkowskiNormalization.py  MinkowskiOps.py  MinkowskiPooling.py  MinkowskiPruning.py  MinkowskiSparseTensor.py  MinkowskiTensorField.py  MinkowskiUnion.py  __init__.py  diagnostics.py  sparse_matrix_functions.py
MinkowskiEngine/utils/: collation.py  coords.py  gradcheck.py  init.py  quantization.py  summary.py
docker/: Dockerfile
src/: broadcast_kernel.cu  coordinate_map_gpu.cu  dispatcher.hpp  gpu.cu  pooling_max_kernel.cu  spmm.cu
tests/: conftest.py  test_smoke.py
tests/python/: conftest.py
tests/python/utils/: gradcheck.py
