[build-system]
requires = [
    "setuptools>=68.0",
    "wheel",
    "torch>=2.0",
    "ninja",
    "numpy>=1.21",
]
build-backend = "setuptools.build_meta"

[project]
name = "MinkowskiEngine"
dynamic = ["version"]
description = "Sparse tensor convolution library for 3D deep learning (RobotFlow-Labs fork)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Christopher Choy", email = "chrischoy@ai.stanford.edu" },
    { name = "RobotFlow-Labs" },
]
keywords = [
    "pytorch",
    "sparse tensor",
    "3D vision",
    "point cloud",
    "deep learning",
    "minkowski",
]
classifiers = [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
examples = [
    "open3d",
    "scipy",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/RobotFlow-Labs/MinkowskiEngine"
Repository = "https://github.com/RobotFlow-Labs/MinkowskiEngine"
Upstream = "https://github.com/NVIDIA/MinkowskiEngine"

[tool.setuptools.dynamic]
version = {attr = "MinkowskiEngine.__version__"}

[tool.setuptools.packages.find]
include = ["MinkowskiEngine*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
